sass/themes/okc/overrides.scss
/* ... */
.itinerary-summary-row .itinerary-legs .leg .route-number .vcenter-children.bicycle .icon {
  padding-top: 5px; // should be center aligned
  margin-left: 0px;
}

.row.itinerary-row .itinerary-instruction-column .itinerary-transit-leg-route .bar-container .icon {
  height: 1em;
  width: 1em;
  position: relative;
  font-size: 43px;
}

.row.itinerary-row .itinerary-instruction-column.intermediate .itinerary-leg-row-intermediate {
    justify-content: space-between;
}

.row.itinerary-row .itinerary-instruction-column .itinerary-transit-leg-route .bar-container .vehicle-number-container-v {
  width: inherit;
  display: flex;
  align-items: center;
  text-decoration: none;

  .vehicle-number {
    left: inherit;
    width: inherit;
    padding: 0px;
  }
}

.itinerary-summary-row .itinerary-legs .leg.bike_park,
.itinerary-summary-row .itinerary-legs .leg.car_park {
  min-width: 48px;
  border: 1px solid $gray;
  height: initial;
}

.itinerary-summary-row .itinerary-legs {
  gap: 2px;
  // Because most legs have a min-width (e.g. because their icons need to be visible),
  // with a sufficiently large number of legs, they might take up space beyond their
  // container, so we make the container scrollable.
  overflow-x: scroll;
  overflow-y: hidden;

  .leg.walk.render-icon,
  .leg.bicycle.render-icon,
  .leg.wait.render-icon {
    min-width: 36px; // bicycle is wider
  }
}

.summary-list-container {
  border-top: none;
}
.itinerary-summary-row {
  .action-arrow {
    display: initial;
    align-items: initial;
    top: 52px;
    position: relative;
  }
  &.bp-large .action-arrow-click-area {
    padding: 17px 15px 0 20px;
    margin-left: 0px;
  }
  .itinerary-first-leg-start-time-container .itinerary-first-leg-start-time {
    font-size: $font-size-xxsmall;
    .start-time {
      font-weight: $font-weight-bold;
    }
  }

  .itinerary-legs .leg .route-number {
    height: initial;
    color: $white;
    .leg-duration-container .leg-duration {
      color: $black;
      font-size: $font-size-xxsmall;
    }
    .vcenter-children.wait .leg-duration-container {
      // match upstream style with waiting legs too
      padding-left: 5px;
    }

    .vcenter-children.bicycle > .icon,
    .vcenter-children.wait > .icon {
      // reset HSL styles
      width: unset;
      height: unset;
    }
    .vcenter-children.bicycle .icon-container .icon {
      width: 36px;
      height: 36px;
      fill: $gray;
    }
    .vcenter-children.wait .icon-container .icon {
      width: 28px;
      height: 28px;
      fill: $gray;
    }

    .line .icon {
      font-size: 43px;
    }
    .vcenter-children.walk .icon,
    .vcenter-children.wait .icon {
      width: 28px;
      fill: $gray;
      margin-left: 4px;
    }
    .special-icon {
      height: inherit;
    }
    .vehicle-number-container-v .vehicle-number {
      font-weight: $font-weight-normal;
      font-size: $font-size-normal;
    }
  }
  .itinerary-duration-container {
    font-weight: $font-weight-bold;
    padding: 20px 0px 10px;
    /* swap duration and start/end time */
    .itinerary-start-time-and-end-time {
      float: right;
     }
     .itinerary-duration {
    float: left;
    .icon-container {
      padding-right: 20px;
    }
     }
     .itinerary-start-date {
      float: right;
     }
     .itinerary-fare {
      float: left;
      display: flex;
      align-items: center;
      gap: 2px;
      margin-left: 12px;
      font-size: $font-size-xsmall;
      color: $gray;

      .icon-container {
        width: 14px;
        height: 14px;
        flex-shrink: 0;
      }
     }
   }
}

.itinerary-summary-row .summary-clickable-area {
  padding-bottom: 20px;
}

.itinerary-summary-row.bp-large .summary-clickable-area {
  max-width: calc(100% - 60px);
}

.desktop .itinerary-summary-row:before {
  height: calc(100% - 37px);
}

/* Map */
div.map .leaflet-container .leaflet-control-attribution a {
  color: $gray;
}

/* Plan A Trip Page overrides
=> See as well digitransit-compponent-control-panel/src/helpers/styles.scss
*/
.top-bar section.title {
   padding-left: 50px;
}
.right-offcanvas-toggle {
  .settings-button-text {
    margin-top: 0px;
    font-size: $font-size-small;
  }
  > div {
    > div {
      align-items: center;
    }
  }
}

/* Settings overrides*/
.settings-option-container h2 {
  padding-top: 94px;
  padding-left: 0;
  font-size: $font-size-xlarge;
  font-weight: $font-weight-bold;
}

.settings-dropdown-wrapper .fake-select-arrow {
  height: .7em;
  width: .7em;
}

.settings-dropdown-wrapper .settings-dropdown-label {
  color: $black;
  font-size: $font-size-normal;
  padding: 0;
  align-items: center;

  .settings-dropdown-text-container {
    margin: 16px 0;
  }
  .settings-dropdown-label-text {
    margin: 20px 0;
    color: inherit;
    font-size: inherit;
  }
  .settings-dropdown-label-value {
    float: none;
    margin: 0;
    color: inherit;
    font-size: inherit;
  }
}
.settings-dropdown-wrapper .settings-dropdown .settings-dropdown-choice {
  color: $black;
  font-size: $font-size-normal;
  .kmh-value {
    color: inherit;
  }
}
.settings-dropdown-wrapper .icon-container {
  float: none;
  margin: 0;
  display: inline-block;
  vertical-align: middle;
}

.customize-search .walk-options-container {
  padding-left: 16px;
  .walk-option-inner {
    padding-left: 0;
  }
}

.customize-search .walk-options-container label.toggle-label {
  color: $black;
  font-size: $font-size-normal;
  margin-top: 20px;
  margin-left: 0;

  .toggle-label-text {
    padding-top: 0;
  }
}

.settings-mode-option-container .settings-mode-option-label {
  padding: 0;
  .settings-mode-option-label-text-container {
    align-items: center;
  }
  .settings-mode-option-label-text {
    color: $black;
  }
}

.customize-search .settings-header {
  color: $black;
  font-weight: $font-weight-bold;
  padding-left: 0;
}

.mode-option-container {
  border-bottom: 1px solid #d5d5d5;
}
/* ... */

